# UnifyOS

./: .gitignore
appresolver/: README.md  pyproject.toml
appresolver/appresolver/: __init__.py  __main__.py  cli.py  environment.py  environment_registry.py  errors.py  manifest.py  registry.py  runtime_policy.py  state.py  subprocess_runner.py
appresolver/appresolver/backends/: __init__.py  appimage.py  flatpak.py  podman.py
appresolver/appresolver/gui/: __init__.py  __main__.py  app.py  file_open.py  file_open_helpers.py  helpers.py  workers.py
appresolver/appresolver/services/: __init__.py  apps.py  desktop_integration.py  environments.py  files.py  packages.py  summaries.py
appresolver/tests/: test_appimage.py  test_cli.py  test_environment.py  test_environment_registry.py  test_flatpak.py  test_gui_file_open_helpers.py  test_gui_helpers.py  test_gui_main.py  test_manifest.py  test_podman.py  test_registry.py  test_runtime_policy.py  test_services_apps.py  test_services_desktop_integration.py  test_services_environments.py  test_services_files.py  test_services_packages.py  test_services_summaries.py  test_state.py
docs/: Fix_Linux_Plan_OS.md  platform-constitution.md  resolver-spec.md
