[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "appresolver"
version = "0.1.0"
description = "App Resolver v0 CLI prototype"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ProjectOS" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
gui = [
  "PySide6>=6.7"
]

[project.scripts]
appresolver = "appresolver.cli:main"
appresolver-gui = "appresolver.gui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
